--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,38 @@
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
+//  "compilerOptions": {
+//    "outDir": "./dist/out-tsc",
+//    "strict": true,
+//    "noImplicitOverride": false,
+//    "noImplicitAny": false,
+//    "noPropertyAccessFromIndexSignature": false,
+//    "noImplicitReturns": false,
+//    "noFallthroughCasesInSwitch": false,
+//    "skipLibCheck": true,
+//    "isolatedModules": false,
+//    "esModuleInterop": true,
+//    "experimentalDecorators": true,
+//    "moduleResolution": "bundler",
+//    "importHelpers": true,
+//    "target": "ES2022",
+//    "module": "ES2022",
+//    "resolveJsonModule": true,
+//    "allowSyntheticDefaultImports": true,
+//
+//  },
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "moduleResolution": "bundler",
-    "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022"
+    "target": "ES2022" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "module": "ES2022" /* Specify what module code is generated. */,
+    "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
+    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+    "strict": true /* Enable all strict type-checking options. */,
+    "noImplicitAny": false /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "resolveJsonModule": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
